feat: added abort support (#65)
* feat: added abort support

* chore: api spec tests

* fix: added abourted support to rest api
