# openapi3.yaml
@@ -421,6 +421,12 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/taskIdList'
+        400:
+          description: Invalid request
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/errorMessage'
       tags:
         - tasksManagement
 
@@ -456,6 +462,23 @@ paths:
               schema:
                 type: string
                 example: OK
+      tags:
+        - tasksManagement
+  /tasks/abort/{jobId}:
+    parameters:
+      - $ref: '#/components/parameters/jobId'
+    post:
+      operationId: abortTasksAndJob
+      summary: updates job and pending tasks statuses to "Aborted"
+      responses:
+        204:
+          description: aborted pending tasks
+        404:
+          description: job not found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/errorMessage'
       tags:
         - tasksManagement
 
@@ -627,6 +650,7 @@ components:
         - Completed
         - Failed
         - Expired
+        - Aborted
       example: 'Pending'
     job:
       type: object
